added another line on html.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Sample Page</title>
 </head>
 <body>
-    <h1>Sample page body</h1>
+    <h1>Sample page body, ok</h1>
+    <h2>editing page</h2>
 </body>
 </html>
