another line added

--- a/hello.html
+++ b/hello.html
@@ -8,6 +8,7 @@
 <body>
     <h1>learning git</h1>
     <h2>adding content to the page made</h2>
+    <h>making more changes</h>
     
 </body>
 </html>
