modified to push to github

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Sample page body, ok</h1>
     <h2>editing page</h2>
     <h2>can we meet tommorrow</h2>
+    <h2>new changes</h2>
 </body>
 </html>
